@@ -9,23 +9,23 @@ AUX install_on_sda_gpt.sh-1 2153 SHA256 425cfb18b6588d8c544ae0d8cafcee465ed71efe
 AUX marvell-tso-udev-1 222 SHA256 6ed5ef22ebcfd90bc2c2187f429516b6b8c6d26108b531629a3341ce48addfae SHA512 e0acb1308c3f25afe5e9e709ccc04a0fd33c38f12ac3ca6a07a756b56e82ff85d445443bfa01e1d4c1f4b82329418a42831dd83b8ac58f12c235a8f3fb66962a WHIRLPOOL b5f5cf0667d957db37fcb53642a811c87d9ef5414a320f367170933d715b3724442237e65b07762056167766d84c4f4497c1e67f7131b6c4bd5d630974523fdb
 AUX poweroff-b3-1 273 SHA256 af83927b32add243ef00d03bef81058f7466b969fdd08c3cab76469c66768cdd SHA512 166a7491f4707e1ec3fa9e5f9e8c3deb49c531e4e10e5d33eeb84665e4b8b0bfb1f550574e8f07e73173ba3ce7aafcc73916f0aa0272ccfd381e7f5d2fb11a2c WHIRLPOOL 08bc46fd7bfdadb84cffb7c2a8ecf569eb21438af976a2c8a10c5e06df1dce2e8096f97567c4e0d5c058459fb92d236b7d1b3bfce30e78bcb8ca8e97a20981ba
 EBUILD b3-init-scripts-1.0.4.ebuild 946 SHA256 011124c7c86c1b9d27e61af6daa6eca6e1c54f4c217362101c6cbad9967189ac SHA512 7b38ea8229715413bbdfe39f3245114346af0e7447b001b6a5d55a3c83db1c1d211d41b33ff4904dbc277e8d87547bcbc84d056309164d9d20157dd1980684a1 WHIRLPOOL 878e109da6f81ad9d2730bf559b17114667d13fd004a976768cafec6d00b717c119c74c46ad0afef4166174f20f02db07d756055c4e6047f85a4878af0530fe3
-EBUILD b3-init-scripts-1.0.5.ebuild 1725 SHA256 f280eeee0470dd1fce26584c88e415b5c8c246f836cae56a78796ff212d4801b SHA512 55e462177b34508085786ad5109dcf0c0a5463ec8d8101f5757c691ec69c0c52f566cf5e90b19471c46f82ccccc8a4f2233ad47e4d7e60b74c316303e4d6c110 WHIRLPOOL d3abd36331a07d75814f01dbf377aec75cb080f2ef1c488d5d5088d1299ce729dab9e8aaf6265d7882cf264b78c098a92ebb74359c24832c1cca5105082c0989
-MISC ChangeLog 1334 SHA256 b3804be680287e96878e73d7ff799d30ccb404aedb4337c625168c08bd6bf4a2 SHA512 211ed6db67dd1717629ceefc07a21bd89a4536935b24383f95994636b2dbabd992d46b35d9c01dc9276287419f1f81dfa237636ad15d8a91b37ee7e0cd9d448e WHIRLPOOL 5b84294fc4255fb6bc92344f3e758c56e800206b7e20d59aedce4685ecbc4b4145cb99d83ad0ae7b2a15e70bb39d58a42a69ed9a16ed5807655a2109565faf97
+EBUILD b3-init-scripts-1.0.5.ebuild 1786 SHA256 c02aab745be6bc3df7d8f3f7aeab3e1d23cf07977ec10908feba91fe00dab2a5 SHA512 75395c5893b2370c2669e461d541099722d66ee91248ec853e8aaee1a80bb445c7a2e1e282ac3d6a7499b88f6cf3b69e0fa47322892b8cfcd6ff246c055a2592 WHIRLPOOL 5b5062fa4599ba51a0e3fb1cd94e9fbba9a7f115d707f38a5e544b685742bc2b4ad72ad6bbc451d415f2cc8d2172df170603707de2b4cd8630a5e022e91bc26e
+MISC ChangeLog 1437 SHA256 134e40b3d5876641a6498ae14efdb1979e5f6bed434b4dd18db2decab230c90f SHA512 665784400a6695ff98ff1251508009c372e7fb38edec936a3f02e62b057816222356b709cff736985af6ab807ca28871e4eed8546fa011fb9076775c154f4beb WHIRLPOOL cfda2b19ee9af3fb5a961a3b63a5e633185c1e817318da8f710e2c0899fd3e6c06d34a2ac8706358e82082e0d8f4f53cd441b085c7f142950d643b480d036296
 MISC metadata.xml 617 SHA256 c4526e3fb19b3a6d16064ca831432bc3ad172c2903951b19b3ac88b042555e1e SHA512 23c7b366d54b3174a3de4b033c15668aca5bfb2322050aea388aec09f4d234b37766accd16d473670721453c9eda3ce918fdc8e646de3e643fb2e597e1caea3c WHIRLPOOL 34148bd254c5ca25d0a33c20f9609beb834c4b6514cc445413522645a81c087da32aff08a340bae9bcdc50ac643ba91724df618836d255f8138a698d212774d5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJWNmjbAAoJEDHIDbLd52zqXuUP/0PbU04Jw5Jzh5mJ+cqXQ1pB
-5apaBWjOaqPORwrGe7bqd7XeUmbt7Il01J+nmaaLjGupZSqStb/xTKASQqTpJAWx
-84Hy4v2RDtjmQRtJoPs2hKbS7bzgvw32Am1UpPrhVT9Wk3H9kMXjapASVT1AgNT/
-4vplsU8FxsAKGcKqQrNV/4YLV53tRw42Gn9khWG7BBOnCav0VF9LBfMpIOcF587r
-8894fv4Yb/4dXf64Z8gk+ltoM7NcOk+xz5qfe/DUsg+ad68uw7TS+Zs/j0azk8Ll
-kgCZBuBtj+8PX0MXbd6Ak55pYB+ZGEsJ9QeXMTNjEubRzRmHa4KYjPAyCKfLWqre
-x1f1pLQZ5INLuTJLf2acJPDQnIXwa0R8g8r820/f0/GhMebVh2kC0ViGL09+yVU8
-LT6PvWvK6eFi6A5u5c8cctEob+u6H3xXwRZq63U4f3ICKD21XoCXKwCRzHxZKshR
-oiubnhB/KRrfBXc59QfsTvqV67SfVoUWGiue+TBeVCKrLGzr++UxCeN2JlodfOCy
-m5N/aertvYpAWnonzfDlxtJHwZv4jyUOdU3gUAjInh9oB9URLjUwOm/NFx1o9WPq
-gJtwmlBthKQuKuc2HmUZzDJONTUsh6e+6WRHq7Kewyocfc/KrivaeWZRf78yG3Wa
-oxQ6q5sm396fpYRNBoEK
-=htEl
+iQIcBAEBCAAGBQJWNm88AAoJEDHIDbLd52zqtSkP/3J3+FuacxTa53oc0cgoJ08I
+iOv0GST1pwyrDtkSEjTjunOSC87UOb6Q/NSQv1KKaKfhxjbYUcR3YABTt9rKBNKt
+KNbVxm5bpcuLATBPjii1ysYbakqhZRWhomqlYu1zCsNXMGY/e2wSpBXYidE59ybT
+dwLG9PlMJTmeZnC5DNjGksDVzpmXDaWG0cWfDeipxJYW3e55XIhMKo72K+/cnGgI
+/NIN/K3+nv3SJdVSk9+dOhRp3Ebfl4WY+WlQ8jUpD+9n76ZCp6QhemmD61Wq23ls
+FFrs9IRxVwRTDGucv+9caxAlOltJzH/ATIm7XUbkdIyx5GXPlutFFmgBOdZJVlRE
+n9Dyf7ZiFjSfHPHspXWtkloGdP3jg8rHtA/0pqpvjJn0iT/tzoh+dvwl3j5WMO+q
+AdaLRJ7TZ9YaZEf6CMVlcukoEh5qjyRIXAFy+8b+kAESlP30pgNWDIP2T3wyAFHI
+doXueJTuvCgDzW39lCqhUXA6K2a836fz01MEVuDm/IWSlDJzCyoZVf+3Ga8I54EN
+PIMVxIxsFLNQdQey1BhgGswSMtymRWUYQYrpCDY4fnrqBzf3axTuM/ZC8Djh7XQr
+KgNK2YHQs1XtAhGNpL1bbcaSKgs9vWJdQk6XyULKAZJ7YINeYvg9+fWGD4+E8WkO
+dN+ED3j4/W+88U6qP7aD
+=t6AE
 -----END PGP SIGNATURE-----
